--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,8 +7,8 @@
       <%= @item.product_name %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.image.variant(resize: '630x500') ,class:"item-box-img" %>
-      <% if @items.present? %>
+      <%= image_tag @item.image.variant(resize: '640x500'), class:"item-box-img" %>
+      <% if @item.purchase.present? %>
         <div class="sold-out">
           <span>Sold Out!!</span>
         </div>
@@ -23,13 +23,13 @@
       </span>
     </div>
 
-     <% if user_signed_in? %>
+    <% if user_signed_in? && @item.purchase == nil %>
       <% if current_user.id == @item.user_id %>
         <%= link_to '商品の編集', edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
           <p class="or-text">or</p>
         <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
     <% else %>
-        <%= link_to "購入画面に進む", "#",class:"item-red-btn" %>
+        <%= link_to "購入画面に進む", item_purchases_path(@item.id),class:"item-red-btn" %>
       <% end %>
     <% end %>
 
