--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -19,8 +19,9 @@
         <p>
           クリックしてファイルをアップロード
         </p>
-        <%= f.file_field :image, id:"item-image" %>
+        <%= f.file_field :images, name: 'item[images][]', id:"item-image" %>
         <%= image_tag @item.image.variant(resize: '500x500'), class: 'item-image' if @item.image.attached? %>
+        <div id="image-list"></div>
       </div>
     </div>
     <%# /商品画像 %>
@@ -37,6 +38,12 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_area :description, class:"items-text", id:"item-info", placeholder:"商品の説明（必須 1,000文字まで）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。" ,rows:"7" ,maxlength:"1000" %>
+        <div class="tag-field", id='tag-field'>
+        
+        <%= f.label :name, "タグ" %>
+        <%= f.text_field :name, class:"input-tag" %>
+        <div id="search-result">
+        </div>
       </div>
     </div>
     <%# /商品名と商品説明 %>
