--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -85,6 +85,12 @@
   font-weight: bold;
 }
 
+.mypege{
+  text-decoration: none;
+  margin-right: 3vw;
+  color: #333333;
+}
+
 
 .logout {
   text-decoration: none;
