--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,7 +132,7 @@
           <li class='list'>
             <%= link_to item_path(item.id) do %>
               <div class='item-img-content'>
-                <%= image_tag item.image, class: "images" %>
+                <%= image_tag item.images[0], class: "images" %>
                 <% if item.purchase.present? %>
                   <div class='sold-out'>
                     <span>Sold Out!!</span>
