--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,7 +7,7 @@
       <%= @item.product_name %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.image.variant(resize: '640x500'), class:"item-box-img" %>
+      <%= image_tag @item.images[0], class:"item-box-img" %>
       <% if @item.purchase.present? %>
         <div class="sold-out">
           <span>Sold Out!!</span>
